[gd_scene load_steps=2 format=3 uid="uid://boepidkh0v6vi"]

[ext_resource type="Script" uid="uid://buqdbalrqiqqs" path="res://scripts/pc_ui.gd" id="1_gro16"]

[node name="MainUI" type="Control"]
layout_mode = 3
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gro16")

[node name="Information" type="Label" parent="."]
layout_mode = 0
offset_left = 196.0
offset_top = 34.0
offset_right = 592.0
offset_bottom = 72.0
text = "Information about our liers muahahah"

[node name="NamesButton" type="Button" parent="."]
layout_mode = 0
offset_left = 193.0
offset_top = 69.0
offset_right = 321.0
offset_bottom = 134.0
text = "Names"

[node name="NameList" type="VScrollBar" parent="."]
modulate = Color(0.79607844, 1, 1, 1)
layout_mode = 0
offset_left = 194.0
offset_top = 66.0
offset_right = 639.0
offset_bottom = 583.0

[node name="Names" type="VBoxContainer" parent="NameList"]
layout_mode = 0
offset_left = 36.0
offset_top = 32.0
offset_right = 428.0
offset_bottom = 508.0

[node name="ConditionsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 193.0
offset_top = 144.0
offset_right = 320.0
offset_bottom = 212.0
text = "Conditions"

[node name="ConditionList" type="VScrollBar" parent="."]
layout_mode = 0
offset_left = 196.0
offset_top = 71.0
offset_right = 637.0
offset_bottom = 589.0

[node name="Conditions" type="VBoxContainer" parent="ConditionList"]
layout_mode = 0
offset_left = 10.0
offset_top = 19.0
offset_right = 415.0
offset_bottom = 498.0

[node name="DocumentButton" type="Button" parent="."]
layout_mode = 0
offset_left = 196.0
offset_top = 279.0
offset_right = 303.0
offset_bottom = 330.0
text = "Document"
